--- a/src/components/restore-password/restore-password.styles.scss
+++ b/src/components/restore-password/restore-password.styles.scss
@@ -1,7 +1,14 @@
 .login {
-	margin-top: 50px;
+    margin-top: 50px;
 }
 .submit-button {
-	display: flex;
-	justify-content: center;
+    display: flex;
+    justify-content: center;
+}
+
+.error-message {
+    margin-top: 24px;
+    display: flex;
+    justify-content: center;
+    color: #b90101;
 }
