--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,14 @@
 }
 
 .container {
-	padding-top: 100px;
+	padding-top: 30px;
 }
 
 .App {
 	font-family: "Sriracha", cursive;
+}
+
+.directory {
+	height: 150px;
+	background-color: #ebebeb;
 }
